--- a/index.html
+++ b/index.html
@@ -39,6 +39,80 @@
       <main class="main">
         <section class="section-1">
           <h2 class="text t-cen">Descend into the Dark</h2>
+
+          <figure class="row">
+            <img
+              class="row-img"
+              src="./img/prints/print-1.jpg"
+              alt="Brave the Depths of a Forgotten Kingdom"
+            />
+            <figcaption class="row-text">
+              <h3 class="text">Brave the Depths of a Forgotten Kingdom</h3>
+              <p class="text mb-14">
+                Beneath the fading town of Dirtmouth sleeps a vast, ancient
+                kingdom. Many are drawn beneath the surface, searching for
+                riches, or glory, or answers to old secrets.
+              </p>
+              <p class="text">
+                As the enigmatic Knight, you'll traverse the depths, unravel its
+                mysteries and conquer its evils.
+              </p>
+            </figcaption>
+          </figure>
+
+          <figure class="row rev">
+            <img
+              class="row-img"
+              src="./img/prints/print-2.jpg"
+              alt="Use Your Skills and Reflexes to Survive"
+            />
+            <figcaption class="row-text">
+              <h3 class="text">Use Your Skills and Reflexes to Survive</h3>
+              <p class="text mb-14">
+                Hollow Knight is a challenging 2D action-adventure. You'll
+                explore twisting caverns, battle tainted creatures and escape
+                intricate traps, all to solve an ancient long-hidden mystery.
+              </p>
+              <ul class="row-ul">
+                <li>
+                  <p class="text">Explore vast, interconnected worlds</p>
+                </li>
+                <li>
+                  <p class="text">
+                    Encounter a bizarre collection of friends and foes
+                  </p>
+                </li>
+                <li>
+                  <p class="text">
+                    Evolve with powerful new skills and abilities
+                  </p>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+
+          <figure class="row">
+            <img
+              class="row-img"
+              src="./img/prints/print-3.jpg"
+              alt="Evocative Hand-Drawn Art"
+            />
+            <figcaption class="row-text">
+              <h3 class="text">Evocative Hand-Drawn Art</h3>
+              <p class="text mb-14">
+                The world of Hollow Knight is brought to life in vivid, moody
+                detail, its caverns alive with bizarre and terrifying creatures,
+                each animated by hand in a traditional 2D style.
+              </p>
+              <p class="text">
+                Every new area you'll discover is beautifully unique and
+                strange, teeming with new creatures and characters to discover.
+                The world of Hollow Knight is one worth exploring just to take
+                in the sights and discover new wonders hidden off of the beaten
+                path.
+              </p>
+            </figcaption>
+          </figure>
         </section>
       </main>
     </div>
