feat: trailer embed

--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
             </figcaption>
           </figure>
         </section>
+
+        <section class="section-2">
+          <iframe
+            class="trailer"
+            src="https://www.youtube.com/embed/JuP47fRBsWg"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </section>
+        
       </main>
     </div>
   </body>
