feat: platforms added

--- a/index.html
+++ b/index.html
@@ -125,6 +125,74 @@
             allowfullscreen
           ></iframe>
         </section>
+
+        <section class="section-3">
+          <div class="platforms">
+            <a
+              class="plat-a"
+              href="https://www.nintendo.com/store/products/hollow-knight-switch/"
+              target="_blank"
+            >
+              <img
+                class="plat-img"
+                src="./img/logos/nintendo-switch.png"
+                alt="Nintendo Switch"
+              />
+            </a>
+
+            <a
+              class="plat-a"
+              href="https://store.playstation.com/en-us/product/UP1822-CUSA13632_00-HOLLOWKNIGHT18US"
+              target="_blank"
+            >
+              <img
+                class="plat-img"
+                src="./img/logos/ps4.png"
+                alt="Sony PlayStation 4"
+              />
+            </a>
+
+            <a
+              class="plat-a"
+              href="https://www.xbox.com/en-us/games/store/hollow-knight-voidheart-edition/9mw9469v91lm"
+              target="_blank"
+            >
+              <img
+                class="plat-img"
+                src="./img/logos/xbox.png"
+                alt="Microsoft Xbox One"
+              />
+            </a>
+
+            <a
+              class="plat-a"
+              href="https://store.steampowered.com/app/367520/Hollow_Knight/"
+              target="_blank"
+            >
+              <img class="plat-img" src="./img/logos/steam.png" alt="Steam" />
+            </a>
+
+            <a
+              class="plat-a"
+              href="https://www.gog.com/game/hollow_knight"
+              target="_blank"
+            >
+              <img class="plat-img" src="./img/logos/gog-com.png" alt="Gog" />
+            </a>
+
+            <a
+              class="plat-a"
+              href="https://www.humblebundle.com/store/hollow-knight"
+              target="_blank"
+            >
+              <img
+                class="plat-img"
+                src="./img/logos/humble-store.png"
+                alt="Humble Store"
+              />
+            </a>
+          </div>
+        </section>
         
       </main>
     </div>
