feat: dlcs section added

--- a/index.html
+++ b/index.html
@@ -193,6 +193,75 @@
             </a>
           </div>
         </section>
+
+        <section class="section-4">
+          <h3 class="text t-cen">
+            Hollow Knight Expands with 4 Giant Free Content Packs
+          </h3>
+
+          <div class="row">
+            <div class="dlc">
+              <h4 class="dlc-title text t-cen">
+                <strong> Hidden Dreams </strong>
+              </h4>
+              <figure class="dlc-fig">
+                <img class="dlc-img mb-14" src="./img/dlc/dlc-1.jpg" alt="Hidden Dreams" />
+                <figcaption class="dlc-text">
+                  <p class="text">
+                    Mighty new foes emerge! New Boss fights. New Upgrades. New
+                    Music.
+                  </p>
+                </figcaption>
+              </figure>
+            </div>
+
+            <div class="dlc">
+              <h4 class="dlc-title text t-cen">
+                <strong> The Grimm Troupe </strong>
+              </h4>
+              <figure class="dlc-fig">
+                <img class="dlc-img mb-14" src="./img/dlc/dlc-2.jpg" alt="The Grimm Troupe" />
+                <figcaption class="dlc-text">
+                  <p class="text">
+                    Light the Nightmare Lantern. Summon the Troupe. New Major
+                    Quest. New Boss Fights. New Charms. New Enemies. New
+                    Friends.
+                  </p>
+                </figcaption>
+              </figure>
+            </div>
+
+            <div class="dlc">
+              <h4 class="dlc-title text t-cen">
+                <strong> Lifeblood </strong>
+              </h4>
+              <figure class="dlc-fig">
+                <img class="dlc-img mb-14" src="./img/dlc/dlc-3.jpg" alt="Lifeblood" />
+                <figcaption class="dlc-text">
+                  <p class="text">
+                    A Kingdom Upgraded! New Boss. Upgraded Bosses. Tweaks and
+                    Refinements across the whole game.
+                  </p>
+                </figcaption>
+              </figure>
+            </div>
+
+            <div class="dlc">
+              <h4 class="dlc-title text t-cen">
+                <strong> Godmaster </strong>
+              </h4>
+              <figure class="dlc-fig">
+                <img class="dlc-img mb-14" src="./img/dlc/dlc-4.jpg" alt="Godmaster" />
+                <figcaption class="dlc-text">
+                  <p class="text">
+                    Take your place amongst the Gods. New Characters and Quest.
+                    New Boss Fights. Epic New Music!
+                  </p>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+        </section>
         
       </main>
     </div>
