feat: orchestra added

--- a/index.html
+++ b/index.html
@@ -205,7 +205,11 @@
                 <strong> Hidden Dreams </strong>
               </h4>
               <figure class="dlc-fig">
-                <img class="dlc-img mb-14" src="./img/dlc/dlc-1.jpg" alt="Hidden Dreams" />
+                <img
+                  class="dlc-img mb-14"
+                  src="./img/dlc/dlc-1.jpg"
+                  alt="Hidden Dreams"
+                />
                 <figcaption class="dlc-text">
                   <p class="text">
                     Mighty new foes emerge! New Boss fights. New Upgrades. New
@@ -220,7 +224,11 @@
                 <strong> The Grimm Troupe </strong>
               </h4>
               <figure class="dlc-fig">
-                <img class="dlc-img mb-14" src="./img/dlc/dlc-2.jpg" alt="The Grimm Troupe" />
+                <img
+                  class="dlc-img mb-14"
+                  src="./img/dlc/dlc-2.jpg"
+                  alt="The Grimm Troupe"
+                />
                 <figcaption class="dlc-text">
                   <p class="text">
                     Light the Nightmare Lantern. Summon the Troupe. New Major
@@ -236,7 +244,11 @@
                 <strong> Lifeblood </strong>
               </h4>
               <figure class="dlc-fig">
-                <img class="dlc-img mb-14" src="./img/dlc/dlc-3.jpg" alt="Lifeblood" />
+                <img
+                  class="dlc-img mb-14"
+                  src="./img/dlc/dlc-3.jpg"
+                  alt="Lifeblood"
+                />
                 <figcaption class="dlc-text">
                   <p class="text">
                     A Kingdom Upgraded! New Boss. Upgraded Bosses. Tweaks and
@@ -251,7 +263,11 @@
                 <strong> Godmaster </strong>
               </h4>
               <figure class="dlc-fig">
-                <img class="dlc-img mb-14" src="./img/dlc/dlc-4.jpg" alt="Godmaster" />
+                <img
+                  class="dlc-img mb-14"
+                  src="./img/dlc/dlc-4.jpg"
+                  alt="Godmaster"
+                />
                 <figcaption class="dlc-text">
                   <p class="text">
                     Take your place amongst the Gods. New Characters and Quest.
@@ -262,7 +278,29 @@
             </div>
           </div>
         </section>
-        
+
+        <section class="section-5">
+          <figure class="row rev">
+            <img
+              class="row-img"
+              src="./img/dlc/orchestra.jpg"
+              alt="A Haunting, Orchestral Score"
+            />
+            <figcaption class="row-text">
+              <h3 class="text">A Haunting, Orchestral Score</h3>
+              <p class="text mb-14">
+                Composed and produced by Christopher Larkin, Hollow Knight's
+                epic score is woven throughout the game, echoing the sadness of
+                a majestic civilisation brought to ruin.
+              </p>
+              <a class="anch" href="https://christopherlarkin.bandcamp.com/album/hollow-knight-original-soundtrack" target="_blank">
+                <p class="text">
+                  Purchase the Oficcial Soundtrack
+                </p>
+              </a>
+            </figcaption>
+          </figure>
+        </section>
       </main>
     </div>
   </body>
