--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
   </head>
   <body>
     <div class="wrapper">
+
+      <nav class="nav">
+        <ul class="nav-ul">
+          <li class="nav-li">
+            <a class="nav-a" href="https://www.teamcherry.com.au/" target="_blank">
+              <img class="nav-logo" src="./img/logos/team-cherry.png" alt="Team Cherry Logo">
+            </a>
+          </li>
+          <li class="nav-li">
+            <div class="nav-socials">
+              <a class="nav-a" href="https://twitter.com/TeamCherryGames" target="_blank">
+                <img class="nav-socials-img" src="./img/logos/twitter.png" alt="Twitter">
+              </a>
+              <a class="nav-a" href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA" target="_blank">
+                <img class="nav-socials-img" src="./img/logos/youtube.png" alt="YouTube">
+              </a>
+              <a class="nav-a" href="https://www.facebook.com/teamcherrygames/" target="_blank">
+                <img class="nav-socials-img" src="./img/logos/facebook.png" alt="Facebook">
+              </a>
+            </div>
+          </li>
+        </ul>
+      </nav>
+
       <main class="main">
         <section class="section-1">
           <h2 class="text t-cen">Descend into the Dark</h2>
